@@ -19,7 +19,12 @@ class CreateAccounts < ActiveRecord::Migration
 
     add_index :accounts, [ :user_id, :name, :deleted_at ], :unique => true
     add_index :accounts, :uuid
-    ActiveRecord::Base.connection.execute("CREATE TRIGGER accounts_uuid BEFORE INSERT ON accounts FOR EACH ROW SET NEW.uuid = UUID()");
+
+    if adapter_name.downcase == "mysql"
+      if select_value("select version()").to_i >= 5
+        execute("CREATE TRIGGER accounts_uuid BEFORE INSERT ON accounts FOR EACH ROW SET NEW.uuid = UUID()")
+      end
+    end
   end
 
   def self.down
