@@ -22,7 +22,12 @@ class CreateCampaigns < ActiveRecord::Migration
 
     add_index :campaigns, [ :user_id, :name, :deleted_at ], :unique => true
     add_index :campaigns, :uuid
-    ActiveRecord::Base.connection.execute("CREATE TRIGGER campaigns_uuid BEFORE INSERT ON campaigns FOR EACH ROW SET NEW.uuid = UUID()");
+
+    if adapter_name.downcase == "mysql"
+      if select_value("select version()").to_i >= 5
+        execute("CREATE TRIGGER campaigns_uuid BEFORE INSERT ON campaigns FOR EACH ROW SET NEW.uuid = UUID()")
+      end
+    end
   end
 
   def self.down
