@@ -31,7 +31,12 @@ class CreateLeads < ActiveRecord::Migration
 
     add_index :leads, [ :user_id, :last_name, :deleted_at ], :unique => true
     add_index :leads, :uuid
-    ActiveRecord::Base.connection.execute("CREATE TRIGGER leads_uuid BEFORE INSERT ON leads FOR EACH ROW SET NEW.uuid = UUID()");
+
+    if adapter_name.downcase == "mysql"
+      if select_value("select version()").to_i >= 5
+        execute("CREATE TRIGGER leads_uuid BEFORE INSERT ON leads FOR EACH ROW SET NEW.uuid = UUID()")
+      end
+    end
   end
 
   def self.down
