@@ -6,7 +6,7 @@ class CreateOpportunities < ActiveRecord::Migration
       t.references  :campaign
       t.integer     :assigned_to
       t.string      :name,     :limit => 64, :null => false, :default => ""
-      t.string      :access, :limit => 8, :default => "Private" # %w(Private Public Shared)
+      t.string      :access,   :limit => 8, :default => "Private" # %w(Private Public Shared)
       t.string      :source,   :limit => 32
       t.string      :stage,    :limit => 32
       t.integer     :probability
@@ -20,7 +20,12 @@ class CreateOpportunities < ActiveRecord::Migration
 
     add_index :opportunities, [ :user_id, :deleted_at ], :unique => true
     add_index :opportunities, :uuid
-    ActiveRecord::Base.connection.execute("CREATE TRIGGER opportunities_uuid BEFORE INSERT ON opportunities FOR EACH ROW SET NEW.uuid = UUID()");
+
+    if adapter_name.downcase == "mysql"
+      if select_value("select version()").to_i >= 5
+        execute("CREATE TRIGGER opportunities_uuid BEFORE INSERT ON opportunities FOR EACH ROW SET NEW.uuid = UUID()")
+      end
+    end
   end
 
   def self.down
