@@ -1,2 +1,2 @@
 require "mysql_uuid"
-ActiveRecord::Base.send(:include, ActiveRecord::Uses::MySQL_UUID)
+ActiveRecord::Base.send(:include, ActiveRecord::Uses::MySQL::UUID)
